--- a/languages/en.yml
+++ b/languages/en.yml
@@ -16,6 +16,8 @@ menu:
   schedule: Schedule
   sitemap: Sitemap
   commonweal: Commonweal 404
+  tech: 技术
+  life: 生活
 
 sidebar:
   overview: Overview
