移除 gitalk；移除 bookmark

--- a/languages/en.yml
+++ b/languages/en.yml
@@ -16,8 +16,8 @@ menu:
   schedule: Schedule
   sitemap: Sitemap
   commonweal: Commonweal 404
-  tech: 技术
-  life: 生活
+  tech: Tech
+  life: Life
 
 sidebar:
   overview: Overview
